# pyro-crowdsourcer

./: .isort.cfg  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  collect_env.py  validate_headers.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml  main.yml  scripts.yml  style.yml
scripts/: collect_env.py
src/: app.py  config.py  main.py  utils.py
src/services/: api.py
src/static/: find-out-more.md  find_out_more.md
