[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-crowdsourcer"
version = "0.1.1.dev0"
description = "The image crowdsourcing platform for wildfire visual data"
authors = ["Pyronear <contact@pyronear.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
dash = ">=2.4.1,<2.5.0"
dash-bootstrap-components = ">=1.1.0,<1.2.0"
dash-mantine-components = ">=0.10.2,<0.11.0"
user-agents = ">=2.2.0,<2.3.0"
requests = ">=2.25.0,<3.0.0"
pyrostorage = "==0.1.0"
python-dotenv = ">=0.15.0"
python-dateutil = ">=2.8.2"


flake8 = { version = ">=3.9.0,<5.0.0", optional = true }
isort = { version = "^5.7.0", optional = true }
mypy = { version = "^0.812", optional = true }
black = { version = "^22.1", optional = true }


[tool.poetry.extras]
quality = ["flake8", "isort", "mypy", "black"]

[tool.mypy]
files = "src/*.py"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_bootstrap_components",
    "dash_mantine_components",
    "user_agents",
    "requests",
    "pyrostorage",
    "dateutil",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src/"]
skip_glob = ["**/__init__.py"]

[tool.pydocstyle]
select = "D300,D301,D417"
match = ".*\\.py"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 120
target-version = ['py38']
